--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.294.0"
+    "lucide-react": "^0.294.0",
+    "mongodb": "^6.3.0",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.3.0"
+    "@types/bcryptjs": "^2.4.6",
+    "typescript": "^5.3.0",
+    "dotenv": "^16.3.1"
   }
 }
 
