--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "mongodb": "^6.3.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
