--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jsbarcode": "^3.11.4",
     "bcryptjs": "^2.4.3",
     "html5-qrcode": "^2.3.8",
+    "jsbarcode": "^3.12.1",
     "lucide-react": "^0.294.0",
     "mongodb": "^6.3.0",
     "next": "^14.0.0",
