Add multi-tenant system documentation and testing guides
- Created BROWSER_TEST_REPORT.md to outline the successful implementation of the multi-tenant system, including database seeding, authentication, and data isolation.
- Added MULTI_TENANT_TEST_SUMMARY.md summarizing the test setup, credentials, and manual testing steps for platform-specific functionality.
- Introduced QUICK_TEST.md for a quick reference guide on testing the multi-tenant system.
- Developed TESTING_GUIDE.md to provide detailed instructions for testing the multi-tenant setup locally with Docker.
- Implemented init-db.js and seed-test-data.js scripts for initializing the database and seeding test data.
- Added test-multi-tenant.js script to verify data separation across platforms.
- Updated DOCKER_SETUP.md with new commands and environment configurations for multi-tenant testing.
- Enhanced package.json with new scripts for Docker management and testing.
- Modified docker-compose.yml to include initialization scripts for database setup.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f mongodb",
+    "seed:test": "node scripts/seed-test-data.js",
+    "test:tenant": "node scripts/test-multi-tenant.js"
   },
   "dependencies": {
     "@types/jsbarcode": "^3.11.4",
