--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,16 @@ services:
       - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: admin123
-      MONGO_INITDB_DATABASE: catalogue
+      MONGO_INITDB_ROOT_PASSWORD: password123
     volumes:
       - mongodb_data:/data/db
+      - ./scripts/init-db.js:/docker-entrypoint-initdb.d/init-db.js:ro
     networks:
       - catalogue-network
+
+volumes:
+  mongodb_data:
 
 networks:
   catalogue-network:
     driver: bridge
-
-volumes:
-  mongodb_data:
-    driver: local
-
