Add platform auditing and fixing scripts, and document platform isolation issue resolution
- Introduced two new scripts: `audit-platforms.js` for checking product platform assignments and `fix-platforms.js` for assigning a default platform to products without one.
- Added a comprehensive guide in `PLATFORM_ISSUE_FIX.md` detailing the multi-tenant platform isolation issue, its root cause, and step-by-step solutions for auditing and fixing products.
- Updated `package.json` to include new script commands for auditing and fixing platforms, enhancing the development workflow.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "docker:down": "docker-compose down",
     "docker:logs": "docker-compose logs -f mongodb",
     "seed:test": "node scripts/seed-test-data.js",
-    "test:tenant": "node scripts/test-multi-tenant.js"
+    "test:tenant": "node scripts/test-multi-tenant.js",
+    "audit:platforms": "node scripts/audit-platforms.js",
+    "fix:platforms": "node scripts/fix-platforms.js"
   },
   "dependencies": {
     "@types/jsbarcode": "^3.11.4",
