Implement image and logo upload functionality with Cloudinary integration
- Added file upload capabilities for platform logos in the SuperAdmin component, allowing users to upload images directly to Cloudinary.
- Enhanced AdminProducts component to support image uploads for products, including validation for file type and size.
- Created a new API route for handling file uploads, ensuring secure and efficient image management.
- Updated package dependencies to include formidable and cloudinary for handling file uploads and image processing.
- Improved user experience with image previews and loading states during uploads.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "fix:platforms": "node scripts/fix-platforms.js"
   },
   "dependencies": {
+    "@types/formidable": "^3.4.6",
     "@types/jsbarcode": "^3.11.4",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.8.0",
+    "formidable": "^3.5.4",
     "html5-qrcode": "^2.3.8",
     "jsbarcode": "^3.12.1",
     "lucide-react": "^0.294.0",
