Add migration guide and script for language support in database
- Introduced a new `MIGRATION_GUIDE.md` detailing the process to add language support to platforms and settings in the database.
- Created `migrate-add-language.js` script to automate the addition of a `language` field to platforms and settings, ensuring products inherit the correct language.
- Updated `package.json` to include a new npm script for running the migration.
- Ensured the migration is idempotent, non-destructive, and includes verification steps for successful execution.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "seed:test": "node scripts/seed-test-data.js",
     "test:tenant": "node scripts/test-multi-tenant.js",
     "audit:platforms": "node scripts/audit-platforms.js",
-    "fix:platforms": "node scripts/fix-platforms.js"
+    "fix:platforms": "node scripts/fix-platforms.js",
+    "migrate:language": "node scripts/migrate-add-language.js"
   },
   "dependencies": {
     "@types/formidable": "^3.4.6",
