Add post-deployment initialization guide and ensure super admin functionality
- Created a comprehensive `DEPLOYMENT_INIT.md` guide detailing steps to ensure a super admin user is created automatically after deployment on Vercel.
- Implemented two new API endpoints: `/api/admin/init-on-deploy` for initializing tasks post-deployment and `/api/admin/ensure-super-admin` to ensure the super admin exists.
- Added a cron job in `vercel.json` to automatically call the initialization endpoint daily.
- Updated `package.json` to include a new script for ensuring the super admin.
- Enhanced the login API to verify super admin credentials against the database, improving security and flexibility.
- Introduced a script to ensure the super admin exists, which can be run locally or as part of deployment processes.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:tenant": "node scripts/test-multi-tenant.js",
     "audit:platforms": "node scripts/audit-platforms.js",
     "fix:platforms": "node scripts/fix-platforms.js",
-    "migrate:language": "node scripts/migrate-add-language.js"
+    "migrate:language": "node scripts/migrate-add-language.js",
+    "ensure:super-admin": "node scripts/ensure-super-admin.js"
   },
   "dependencies": {
     "@types/formidable": "^3.4.6",
