--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": ".next",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
   "framework": "nextjs",
-  "installCommand": "npm install"
+  "crons": [
+    {
+      "path": "/api/admin/init-on-deploy",
+      "schedule": "0 0 * * *"
+    }
+  ]
 }
